# mgu

./: README.md  index.html.in  meson.build
include/: linalg.h  render.h  wayland.h
include/mgu/: gl.h  input-event-codes.h  input.h  sr.h  text.h  wayland.h  win.h
src/: demo.c  dump-wayland-protocols.c  input.c  jni_helper.h  linalg.c  sr.c  text.c  win.c  win_em.c  win_wayland.c
src/gl/: render.c  shaders.c  texture.c
src/render/: render.c  shaders.c
src/wayland/: display.c  window.c
